# SolidSimulator

./: .gitignore  CMakeLists.txt  README.md
data/: .gitignore
data/beam/: collision.ini  collision_1p.ini  collision_ball.ini  collision_ball_h0001.ini  collision_ball_h001.ini  collision_cone.ini  collision_cone4.ini  collision_cone_fast.ini  collision_cone_h0003.ini  collision_vp.ini  cubature.ini  gen_basis.ini  simu_cubature.ini  simu_cubature_static.ini  simu_full.ini  simu_full_static.ini  simu_ma.ini  simu_ma_opt.ini  simu_ma_set_mtl.ini  simu_ma_two.ini  simu_subspace.ini  simu_subspace_static.ini
data/beam-coarse/: collision.ini  collision_1p.ini  collision_ball.ini  collision_ball_h001.ini  collision_cone.ini  collision_cone_h001.ini  collision_vp.ini  simu_full.ini  simu_ma.ini  simu_ma_set_mtl.ini
data/beam-coarse/model/: collision.elastic  con_nodes.bou  con_nodes2.bou  interp_weights.txt  material_opt_k_30.elastic  material_opt_k_30_2modes.elastic  material_opt_k_30_m0_ipopt.elastic  mesh.abq  mesh.elastic  mesh_smooth.elastic  mesh_smooth_100_200.elastic  mesh_smooth_small.elastic  mesh_two.elastic  mesh_two_not_all.elastic  tempt_mesh.elastic  test.elastic
data/beam-middle/: simu_full.ini  simu_ma_set_mtl.ini
data/beam-middle/model/: mesh.abq  mesh.elastic  tempt_mesh.elastic
data/beam/model/: collision_harder.elastic  con_nodes.bou  mesh.elastic  mtl_smooth.elastic  mtl_two.elastic  tempt_mesh.elastic  test.elastic  test_fine_non_smooth10.elastic
data/dino/: collision.ini  collision_1p.ini  collision_ball.ini  collision_ball_h0003.ini  collision_cone.ini  collision_cone4.ini  collision_cone_h0003.ini  collision_vp.ini  cubature.ini  gen_basis.ini  simu_cub.ini  simu_cubature.ini  simu_cubature_static.ini  simu_full.ini  simu_full_static.ini  simu_ma.ini  simu_subspace.ini  simu_subspace_static.ini
data/dino-mtlopt/: simu_full.ini  simu_ma_set_mtl.ini
data/dino/model/: cubpoints.txt  mesh.elastic
data/one_tet/: collision.ini  collision_1p.ini  collision_ball.ini  collision_cone.ini  collision_cone10.ini  collision_cone2.ini  collision_cone3.ini  collision_cone4.ini  collision_vp.ini  simu_full.ini
data/one_tet/model/: collision.elastic  mesh.elastic  tempt_mesh.elastic
data/sofa/: simu_full.ini
data/two_tets/: simu_full.ini
data/two_tets/model/: mesh.elastic  tempt_mesh.elastic
data/tyrannosaurus/: collision.ini  gen_basis.ini  simu_full.ini  simu_full_static.ini  simu_subspace.ini
data/tyrannosaurus/model/: con_nodes.bou  interp_weights.txt  mesh.abq  mesh.elastic
doc/: decoupled_simulator.tex  implicit_integration.tex  material.tex  todo.tex
script/: log_analysis.py  report_data.tex  run_all.sh
src/: CMakeLists.txt  DataModel.h  DataModelRender.h  DragOp.h  ElasticMtlGroups.cpp  ElasticMtlGroups.h  MainWindow.cpp  MainWindow.h  PerturbationOp.h  SelectionOp.h  Simulator.cpp  Simulator.h  main.cpp  simulator.ui
src/collisionhandling/: BoxCollisionHandling.h  CMakeLists.txt  MPRGP.h  QPSolver.h  main.cpp  mainQP.h
src/cubature/: CMakeLists.txt  ReducedSimCubature.h  main.cpp
src/extend_basis/: CMakeLists.txt  example.ini  main.cpp
src/set_elastic_material/: CMakeLists.txt  DataModel.h  DataModelRender.h  ElasticMtlGroups.cpp  ElasticMtlGroups.h  MainWindow.cpp  MainWindow.h  PerturbationOp.h  SelectionOp.h  Simulator.cpp  Simulator.h  set_elastic_mtl.ui  ui_set_elastic_mtl.h
src/simulator/: CMakeLists.txt  CubatureSimulator.cpp  CubatureSimulator.h  FullStVKSimulator.h  MASimulator.cpp  MASimulator.h  Simulator.h  SubspaceSimulator.cpp  SubspaceSimulator.h
src/simulator_ui/: CMakeLists.txt  DataModel.cpp  DataModel.h  DataModelRender.h  DragNodeOp.cpp  MainWindow.cpp  MainWindow.h  ManipulateOP.h  PassiveObject.cpp  PassiveObject.h  PerturbationOp.h  SelectionOp.h  main.cpp  simulator.ui  ui_simulator.h
test_case/: CMakeLists.txt
test_case/dino_plane_collision/: CMakeLists.txt  main.cpp
test_case/hello_dino/: CMakeLists.txt  main.cpp
